Fixed width of wall items only on small devices and larger

--- a/app/assets/stylesheets/post.css.scss
+++ b/app/assets/stylesheets/post.css.scss
@@ -183,7 +183,7 @@
     width: 100%;
     padding: 0;
 
-    @media(min-width: $extra-small-device) {
+    @media(min-width: $small-device) {
       width: 350px;
       padding: 10px !important;
     }
